empty cart feature

--- a/src/style.css
+++ b/src/style.css
@@ -159,7 +159,8 @@ body {
 	text-align: center;
 }
 
-#total-price {
-	text-align: center;
-	margin: 12px 0;
+#btn {
+	display: block;
+	padding: 8px;
+	cursor: pointer;
 }
